test/pass/47-assign_none.perk
import "stdio.h"

fun main (): void {
	let x: int? = none;
	if (!x?) {
		printf("everything ok\n");
	}
}