test/fail/24-match_deeper_non_equatable.perk
import "stdio.h"

type List =
    | Empty
    | Cons (int, List)

fun main(): void {
    let l : List = Cons(10, Cons(20, Empty));

    match (l) {
        Cons(_, Cons(`{20}, `{Empty})) {
            printf("Banana");
        },
        _ {
            printf("Not Banana");
        }
    }
}